Removed font weight from active menu items. This prevents menu shifting.

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -141,7 +141,7 @@ div > p.lead + * {
 
 .navbar-nav > div > li.nav-item > a.nav-link.nuxt-link-active {
   border-bottom: 2px solid pink;
-  font-weight: 500;
+  // font-weight: 500;
 }
 
 .dropdown-menu .dropdown-item.nuxt-link-exact-active {
